# companySales

./: README.md  pyproject.toml
compSales/: manage.py
compSales/compSales/: asgi.py  settings.py  urls.py  wsgi.py
compSales/subSales/: apps.py
