[project]
name = "companysales"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Shchukin",email = "pavel.shchukin@intexsoft.by"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
